# fastapi-mysql

./: .dockerignore  .env.example  .gitignore  pyproject.toml  pyrightconfig.json  server.py
app/: config.py  main.py
app/core/: __init__.py  cache.py  database.py  dependencies.py  exceptions.py  logging.py  rate_limiting.py  security.py
docker/: Dockerfile  docker-compose.yml
docker/MySQL/: docker-compose.yml
docker/Redis/: docker-compose.yml
